# CameraCalibration

./: .gitignore  CMakeLists.txt  CameraCalibration  README.md  option.ini
include/: CameraCalibration.h  settings.h  utils.h
src/: CameraCalibration.cpp  DistortCorrection.cpp  main.cpp  settings.cpp  utils.cpp
vc12/: CameraCalibration.sln  CameraCalibration.vcxproj  CameraCalibration.vcxproj.filters  packages.config
