cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 14)
project(CameraCalibration)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED)
add_executable(CameraCalibration src/main.cpp src/CameraCalibration.cpp src/settings.cpp src/utils.cpp)
target_include_directories(CameraCalibration PUBLIC include/)
set(BOOST_LIB_LIST -lboost_system -lboost_filesystem)
target_link_libraries(CameraCalibration ${OpenCV_LIBS} ${Boost_LIBRARIES} ${BOOST_LIB_LIST})
